fix z-index and add background-color in main-container

--- a/wp-content/themes/ztml-theme/assets/styles/global.scss
+++ b/wp-content/themes/ztml-theme/assets/styles/global.scss
@@ -78,10 +78,12 @@ main {
 	gap: 10px;
 	width: 100%;
 	position: relative;
-	background-color: #f2f2f2;
+	background-color: #fff;
+	z-index: 1;
 
 	.content-wrapper {
 		width: calc(100% - 290px);
+		z-index: 1;
 	}
 
 	.sidebar-wrapper {
